--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://user:Guddu99@cluster0.czpaaja.mongodb.net/?retryWrites=true&w=majority'
 PORT=9000
+JWT_SECRET='superhardstring'
