--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
+    "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "formik": "^2.4.5",
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +28,10 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "react-dropzone": "^14.2.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0"
   }
 }
