--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dropzone": "^14.2.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   }
 }
